@@ -1,5 +1,10 @@
 2005-10-21  Han-Wen Nienhuys  <hanwen@xs4all.nl>
 
+	* lily/include/lily-guile.hh (GUILE_ELLIPSIS): define to get clean
+	compile on MOSX
+
+	* python/convertrules.py (conv): add rules.
+
 	* lily/grob.cc: remove is_empty()
 
 	* lily/grob-property.cc: remove add_to_list_property().
